--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="green">#4CAF50</color>
     <color name="red">#F44336</color>
     <color name="blue">#2196F3</color>
+    <color name="yellow">#FFEE58</color>
 </resources>
